--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
     <style>
+        
         body {
             font-family: 'Poppins', sans-serif;
         }
@@ -15,6 +17,7 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
         }
     </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
